Added demo website, POS/admin UI, tenancy, billing, and interview demo seed.